# confocal_cell_seg

./: .gitignore  README.md  config.yaml  pyproject.toml  ruff.toml
notebooks/: 01_tiff_metadata.ipynb
src/ccseg/: cli.py  convert.py  export.py  segmenter.py  settings.py  viz.py
src/ccseg/io/: base.py  factory.py  lif.py  tiff.py
