[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "confocal-cell-seg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "edt>=3.0.0",
    "napari[pyside6]>=0.6.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyopengl-accelerate>=3.1.10",
    "readlif>=0.6.6",
    "scikit-image>=0.25.2",
    "scipy>=1.16.1",
    "tifffile>=2025.8.28",
    "tqdm>=4.67.1",
    "typer>=0.17.4",
]

[dependency-groups]
dev = ["notebook>=7.4.5"]


[tool.hatch.build.targets.wheel]
packages = ["src/ccseg"]


[tool.hatch.build.targets.sdist]
include = ["src/cellseg3d", "pyproject.toml"]
